<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.hybridproject.EditCustomerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:textSize="20sp"
        android:text="@string/edit_customer_activity_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:labelFor="@id/edit_customer_firstName_input"
        android:text="@string/edit_customer_firstName"/>

    <EditText
        android:id="@+id/edit_customer_firstName_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_customer_lastName"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:labelFor="@id/edit_customer_lastName_input"/>

    <EditText
        android:id="@+id/edit_customer_lastName_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_customer_money"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:labelFor="@id/edit_customer_money_input"/>

    <EditText
        android:id="@+id/edit_customer_money_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:inputType="number"
        android:imeOptions="actionDone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_customer_capacity"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:labelFor="@id/edit_customer_capacity_input"/>

    <EditText
        android:id="@+id/edit_customer_capacity_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:inputType="number"
        android:imeOptions="actionDone"
        />
    <Button
        android:id="@+id/edit_customer_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/add_customer_submit_button"/>
</LinearLayout>
