<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/return_bg_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/return_bg_list_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/return_bg_list_title"
        app:layout_constraintLeft_toLeftOf="@id/return_bg_list_title" />
    <TextView
        android:id="@+id/return_bg_list_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/return_bg_list_return_button"
        android:text="@string/return_bg_list_price"/>
    <TextView
        android:id="@+id/return_bg_list_price_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@id/return_bg_list_price"
        app:layout_constraintRight_toLeftOf="@id/return_bg_list_return_button"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/return_bg_list_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/return_bg_list_return_button"
        android:text="@string/return_bg_list_stock"/>
    <TextView
        android:id="@+id/return_bg_list_stock_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/return_bg_list_return_button"
        app:layout_constraintLeft_toRightOf="@id/return_bg_list_stock" />
    <Button
        android:id="@+id/return_bg_list_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/return_bg_list_return_button"/>

</android.support.constraint.ConstraintLayout>